[tool.poetry]
name = "exphub"
version = "0.2.3"
description = ""
authors = ["deepflare <mtyrolski@deepflare.ai>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
neptune-client = "^0.16.17"
plotly = "^5.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
