[tool.poetry]
name = "exphub"
version = "0.2.4"
description = ""
authors = ["deepflare <mtyrolski@deepflare.ai>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
plotly = "^5.15.0"
matplotlib = "^3.7.2"
boto3 = "^1.28.21"
neptune = {version = "^1.5.0rc0", allow-prereleases = true}
ipykernel = "^6.25.1"
jinja2 = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
