[tool.poetry]
name = "exphub"
version = "0.2.7"
description = ""
authors = ["deepflare <mtyrolski@deepflare.ai>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.10"
pandas = "^1.5.3"
plotly = "^5.15.0"
loguru = "^0.7.0"
moto = "*"
boto3 = "*"
urllib3 = "<2"
neptune = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
